Доделал документацию к Swagger - добавил пример сообщения пользователю об ошибке
